objects/tfn_DELWP_Region__c.object
<CustomObject>
    <fields>
        <fullName>tfn_DELWP_Region_Area_Percentage__c</fullName>
        <label>DELWP Region Area Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tfn_DELWP_Region_Area__c</fullName>
        <label>DELWP Region Area</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tfn_Locality__c</fullName>
        <label>Locality</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <label>DELWP Region</label>
    <nameField>
        <label>DELWP Region Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DELWP Regions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>